# SZ3-wasm

./: .gitignore  bytes_to_json.py  compressed.json  decompress.js  doubles.dat.sz  doubles.dat.sz.out  doubles_to_file.py  flake.nix  index.html  test.js
tools/sz3c/: CMakeLists.txt
tools/sz3c/include/: sz3c.h
tools/sz3c/src/: sz3c.cpp
tools/zstd/: Makefile  zstd.cmake
